[desk-tool] Fix form's padding on narrow devices

--- a/packages/@sanity/desk-tool/src/panes/documentPane/editor/EditForm.css
+++ b/packages/@sanity/desk-tool/src/panes/documentPane/editor/EditForm.css
@@ -2,7 +2,7 @@
 
 .editor {
   padding: var(--medium-padding);
-  padding-bottom: calc(var(--medium-padding) * 3);
+  padding-bottom: calc((var(--medium-padding) * 3) + (17px + var(--medium-padding) * 2.5));
 
   @media (--screen-medium) {
     padding: var(--extra-large-padding) var(--medium-padding);
